# winapi-gui-wait

./: CMakeLists.txt  ice.cpp
downloads/gladiator sprites/: source-link.txt
source/: main.cpp  resources.h  resources.rc
source/microlib/: support-machinery.hpp  winapi++.hpp
source/microlib/support-machinery/: Interval_.hpp  basic-types.hpp  exception-handling.hpp  misc.hpp  string-building.hpp  type-builders.hpp
source/microlib/winapi++/: Unique_handle_.hpp  gui.hpp  lib-comctl32.hpp  resource-handling.hpp
source/microlib/winapi-header-wrappers/: windows-h.for-utf8.hpp  windows-h.hpp  windowsx-h.for-utf8.hpp
source/resources/: app-manifest.xml  sprites.source.txt
